[gd_scene load_steps=21 format=2]

[ext_resource path="res://WallNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://playerSprite.png" type="Texture" id=3]
[ext_resource path="res://light.png" type="Texture" id=4]
[ext_resource path="res://Main.gd" type="Script" id=5]
[ext_resource path="res://Menu.gd" type="Script" id=6]
[ext_resource path="res://Minecraft.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Mystical Pixels - Chiptune8-bit - Royalty Free Music.mp3" type="AudioStream" id=8]
[ext_resource path="res://plip!.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://Minecraft.ttf"

[sub_resource type="DynamicFont" id=2]
font_data = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.5, 8.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 152 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 256, 10 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=8]
resource_local_to_scene = true
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 7 )

[node name="Node" type="Node"]

[node name="World" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="World"]
follow_viewport_enable = true

[node name="RichTextLabel" type="RichTextLabel" parent="World/CanvasLayer"]
margin_left = -8.0
margin_top = -112.0
margin_right = 24.0
margin_bottom = -88.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
tab_size = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerNode" type="Node2D" parent="World"]

[node name="KinematicBody2D" type="KinematicBody2D" parent="World/PlayerNode"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="World/PlayerNode/KinematicBody2D"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/PlayerNode/KinematicBody2D"]
position = Vector2( -3.8147e-06, 0 )
shape = SubResource( 3 )

[node name="Detect" type="Area2D" parent="World/PlayerNode/KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/PlayerNode/KinematicBody2D/Detect"]
shape = SubResource( 4 )

[node name="Resetter" type="Area2D" parent="World/PlayerNode/KinematicBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/PlayerNode/KinematicBody2D/Resetter"]
position = Vector2( -288, 0 )
shape = SubResource( 5 )

[node name="Light2D" type="Light2D" parent="World/PlayerNode/KinematicBody2D"]
texture = ExtResource( 4 )
shadow_enabled = true

[node name="ScoreFX" type="AudioStreamPlayer" parent="World/PlayerNode"]
stream = ExtResource( 9 )
volume_db = -25.0

[node name="Sprite" type="Sprite" parent="World"]
modulate = Color( 0.0666667, 0.0156863, 0.164706, 1 )
position = Vector2( -3.8147e-06, 0 )
scale = Vector2( 48, 24 )
z_index = -10
texture = ExtResource( 3 )

[node name="WallNode" parent="World" instance=ExtResource( 1 )]
position = Vector2( 296, 0 )

[node name="WallNode2" parent="World" instance=ExtResource( 1 )]
position = Vector2( 400, 32 )

[node name="WallNode3" parent="World" instance=ExtResource( 1 )]
position = Vector2( 504, -8 )

[node name="WallNode4" parent="World" instance=ExtResource( 1 )]
position = Vector2( 616, 0 )

[node name="WallNode5" parent="World" instance=ExtResource( 1 )]
position = Vector2( 720, 24 )

[node name="Camera2D" type="Camera2D" parent="World"]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="LavaFloor" type="StaticBody2D" parent="World"]
pause_mode = 2
position = Vector2( 0, 182 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/LavaFloor"]
shape = SubResource( 6 )

[node name="Menu" type="Control" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -256.0
margin_top = -152.0
margin_right = 216.0
margin_bottom = 112.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Menu"]
margin_left = -64.0
margin_top = 16.0
margin_right = 64.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 7 )
text = "Highscore:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title Card" type="Label" parent="Menu"]
margin_left = -256.0
margin_top = -96.0
margin_bottom = -61.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 8 )
text = "Totally Not a Flappy Bird
Clone"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressSpace" type="Label" parent="Menu"]
margin_left = -128.0
margin_top = 64.0
margin_right = 128.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 9 )
text = "Press Space to Start"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicCredits" type="Label" parent="Menu"]
margin_left = 80.0
margin_top = 128.0
margin_right = 425.0
margin_bottom = 163.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 10 )
text = "BG Music by: TeknoAXE's Royalty Free Music
SFX by: Brand Name Audio"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Menu"]
margin_left = -252.0
margin_top = 128.0
margin_right = 92.0
margin_bottom = 163.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 11 )
text = "Made by: Ralf Michael S. Balatibat
Based on a Youtube tutorial by Eli Cuaycong"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
process_priority = 10
stream = ExtResource( 8 )
volume_db = -30.0
autoplay = true

[connection signal="area_entered" from="World/PlayerNode/KinematicBody2D/Detect" to="World/PlayerNode/KinematicBody2D" method="_on_Detect_area_entered"]
[connection signal="body_entered" from="World/PlayerNode/KinematicBody2D/Detect" to="World/PlayerNode/KinematicBody2D" method="_on_Detect_body_entered"]
[connection signal="body_entered" from="World/PlayerNode/KinematicBody2D/Resetter" to="World/PlayerNode/KinematicBody2D" method="_on_Resetter_body_entered"]
